--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "oracledb": "^5.2.0"
+    "node-persist": "^3.1.0",
+    "oracledb": "^5.2.0",
+    "os-utils": "0.0.14",
+    "pg": "^8.7.1"
   }
 }
